--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
   <pre>       </pre>
   <div style="text-align:center">
     <h1>Covid Data Bot</h1>
-    <h3>Get current data about the coronavirus fetched from the WHO</h3>
+    <h3>Get current data about the coronavirus. Uses data from Johns Hopkins University.</h3>
     <a class="btn btn-primary"
       href="https://discord.com/api/oauth2/authorize?client_id=716343563083972618&permissions=281664&scope=bot"
       role="button">Invite the bot</a>
