add healthagency.html to flask

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,6 +47,13 @@
         href="https://discord.com/api/oauth2/authorize?client_id=716343563083972618&permissions=281664&scope=bot"
         role="button">Invite the bot</a>
     </div>
+    <pre>     </pre>
+    <div style="text-align:center">
+    <h1>Find your local health agency</h1>
+    <a class="btn btn-primary"
+        href="/healthagency"
+        role="button">Go</a>
+    </div>
 </body>
 
 </html>
