--- a/templates/index.html
+++ b/templates/index.html
@@ -1,59 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <script src="https://kit.fontawesome.com/9b5817d310.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-</head>
-
-<body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <nav class="navbar navbar-light bg-light">
-      <a class="navbar-brand" href="#">
-        <i class="fas fa-virus" width="30" height="30"></i>
-        Covid Data
-      </a>
-      </nav>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link"
-              href="https://discord.com/api/oauth2/authorize?client_id=716343563083972618&permissions=281664&scope=bot">Invite</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <pre>       </pre>
-    <div style="text-align:center">
-      <h1>Covid Data Bot</h1>
-      <h3>Get current data about the coronavirus. Uses data from Johns Hopkins University.</h3>
-      <a class="btn btn-primary"
-        href="https://discord.com/api/oauth2/authorize?client_id=716343563083972618&permissions=281664&scope=bot"
-        role="button">Invite the bot</a>
-    </div>
-    <pre>     </pre>
-    <div style="text-align:center">
-    <h1>Find your local health agency</h1>
-    <a class="btn btn-primary"
-        href="/healthagency"
-        role="button">Go</a>
-    </div>
-</body>
-
-</html>
+{% extends "layout.html" %}
+{% block content %}
+<div style="text-align:center">
+  <h1>Covid Data Bot</h1>
+  <h3>Get current data about the coronavirus. Uses data from Johns Hopkins University.</h3>
+  <a class="btn btn-primary"
+    href="https://discord.com/api/oauth2/authorize?client_id=716343563083972618&permissions=281664&scope=bot"
+    role="button">Invite the bot</a>
+</div>
+<pre>     </pre>
+<div style="text-align:center">
+<h1>Find your local health agency</h1>
+<a class="btn btn-primary"
+    href="/healthagency"
+    role="button">Go</a>
+</div>
+{% endblock %}
