--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-
+<div class="row">
 <div class="card" style="width: 18rem;">
   <div class="card-body">
     <h3 class="card-title">Quick Stats</h3>
@@ -26,5 +26,6 @@
     <p class="card-text">Find your reigonal health agency with this handy tool.</p>
     <a href="/healthagency" class="btn btn-primary">Use the tool</a>
   </div>
+</div>
 </div>
 {% endblock %}
