--- a/templates/healthagency.html
+++ b/templates/healthagency.html
@@ -6,4 +6,5 @@
 {% if regional %}
   <p>Your regional public health agency is <a href="{{regional[1]}}">{{regional[0]}}</a></p>
 {% endif %}
+<p>For global information regarding the COVID-19 pandemic, the <a href="https://www.who.int/">World Health Organization</a> has many resources available</p>
 {% endblock %}
