--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,7 +31,10 @@
               href="https://discord.com/api/oauth2/authorize?client_id=716343563083972618&permissions=281664&scope=bot">Invite</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="/about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/healthagency">Health Agencies</a>
           </li>
         </ul>
       </div>
