--- a/templates/index.html
+++ b/templates/index.html
@@ -27,4 +27,11 @@
     <a href="/healthagency" class="btn btn-primary">Use the tool</a>
   </div>
 </div>
+<div class="card" style="width: 18rem; padding: 10px; margin: 10px;">
+  <div class="card-body">
+    <h3 class="card-title">About</h3>
+    <p class="card-text">Learn more about the coronavirus from trusted news sources.</p>
+    <a href="/about" class="btn btn-primary">Go</a>
+  </div>
+</div>
 {% endblock %}
